SERVER-67653 don't initiate critical section if remainingMillis is omitted

(cherry picked from commit abd6330d793235c8fbc5de7bf3ec53855ebea9d3)

SERVER-69693 Use lambda instead of repeating code in resharding coordinator